[gd_scene load_steps=43 format=3 uid="uid://dytds14faeiek"]

[ext_resource type="Script" path="res://Scenes/Characters/PlayerTemplate/PlayerTemplate.gd" id="1"]
[ext_resource type="Animation" uid="uid://c0xprhi6dhy0g" path="res://Scenes/Characters/PlayerCharacter/Animations/Dodge.res" id="8_3brwe"]
[ext_resource type="Script" path="res://Scenes/Characters/PlayerCharacter/Scenes/PlayerHurtbox.gd" id="10"]
[ext_resource type="Script" path="res://Scenes/Characters/BaseResources/LocalMisspredictSmoother.gd" id="14_5jlmc"]
[ext_resource type="Script" path="res://Scenes/Characters/ModularSystems/ComponentMap/C_ComponentMap.gd" id="16_j57jl"]
[ext_resource type="Texture2D" uid="uid://cx67ux87hxssh" path="res://Assets/Characters/PetPlayer/20231114PetCharacter_Sprite.png" id="17_ovi25"]
[ext_resource type="Script" path="res://Scenes/Components/LocalAnimation/LocalRollbackAnimationTree.gd" id="18_vf848"]
[ext_resource type="PackedScene" uid="uid://c8y3eo1e1fvkm" path="res://Scenes/Characters/PlayerCharacter/Scenes/PlayerGUI/OverwatchHealth/OverwatchHealth.tscn" id="26"]
[ext_resource type="Shader" path="res://Assets/Placeholder/Shaders/OverwatchHealth.tres" id="27"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(45, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_65xcc"]
radius = 30.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qmhuf"]
resource_local_to_scene = true
shader = ExtResource("27")
shader_parameter/health_segments = 5.0
shader_parameter/armor_segments = 1.0
shader_parameter/shield_segments = 1.0
shader_parameter/health_percent = 1.0
shader_parameter/shield_percent = 1.0
shader_parameter/armor_percent = 1.0
shader_parameter/background_color = Color(0, 0, 0, 0.333333)
shader_parameter/health_color = Color(1, 1, 1, 1)
shader_parameter/armor_color = Color(1, 1, 0, 1)
shader_parameter/shield_color = Color(0, 0, 1, 1)
shader_parameter/no_health = Color(1, 1, 1, 0.180392)
shader_parameter/outline_color = Vector4(1, 1, 1, 1)

[sub_resource type="Animation" id="10"]
resource_name = "Hurt"
length = 0.2
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.403922, 0.403922, 1), Color(1, 0.403922, 0.403922, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LocalRollbackAnimationTree:is_looping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="4"]
resource_name = "Idle"
length = 1.5
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LocalRollbackAnimationTree:is_looping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerHurtbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NodeInterpolater/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LocalRollbackAnimationTree:is_looping")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("NodeInterpolater/Sprite2D:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("NodeInterpolater/Sprite2D:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="8"]
resource_name = "Run-Down"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.433333, 0.566667, 0.7, 0.833333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_chli7"]
resource_name = "Run-L"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.283333, 0.433333, 0.566667, 0.7, 0.833333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_82e7m"]
resource_name = "Run-L-Down"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.383333, 0.566667, 0.766667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_53l70"]
resource_name = "Run-L-Up"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.183333, 0.383333, 0.566667, 0.766667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_13gys"]
resource_name = "Run-R"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.283333, 0.433333, 0.566667, 0.7, 0.833333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_klsil"]
resource_name = "Run-R-Down"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.383333, 0.566667, 0.766667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.01667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_yr3vi"]
resource_name = "Run-R-Up"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.183333, 0.383333, 0.566667, 0.766667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ju63x"]
resource_name = "Run-Up"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.483333, 0.716667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40]
}

[sub_resource type="Animation" id="Animation_nttvn"]
resource_name = "Slide-R"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.183333, 0.383333, 0.583333, 0.783333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeInterpolater/Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_78n5d"]
resource_name = "Slide-RUp"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.183333, 0.366667, 0.566667, 0.766667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="Animation" id="Animation_hthoa"]
resource_name = "Swing"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeInterpolater/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.816667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nfg0w"]
_data = {
"Dodge": ExtResource("8_3brwe"),
"Hurt": SubResource("10"),
"Idle": SubResource("4"),
"RESET": SubResource("7"),
"Run-Down": SubResource("8"),
"Run-L": SubResource("Animation_chli7"),
"Run-L-Down": SubResource("Animation_82e7m"),
"Run-L-Up": SubResource("Animation_53l70"),
"Run-R": SubResource("Animation_13gys"),
"Run-R-Down": SubResource("Animation_klsil"),
"Run-R-Up": SubResource("Animation_yr3vi"),
"Run-Up": SubResource("Animation_ju63x"),
"Slide-R": SubResource("Animation_nttvn"),
"Slide-RUp": SubResource("Animation_78n5d"),
"Swing": SubResource("Animation_hthoa")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nivrf"]
animation = &"Dodge"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xd2l5"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2pms8"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rbhud"]
animation = &"Run-Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vkn4s"]
animation = &"Run-R"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jd3ym"]
animation = &"Run-Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_do3c2"]
animation = &"Run-L"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_u2an3"]
auto_triangles = false
blend_point_0/node = SubResource("AnimationNodeAnimation_rbhud")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_vkn4s")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_jd3ym")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_do3c2")
blend_point_3/pos = Vector2(-1, 0)
triangles = PackedInt32Array(0, 1, 3, 1, 2, 3)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rh347"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aryfl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o82pg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w8gsf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ucnp2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jk8ey"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ypust"]
states/Dodge/node = SubResource("AnimationNodeAnimation_nivrf")
states/Dodge/position = Vector2(642, 75)
states/End/position = Vector2(519, 63)
states/Idle/node = SubResource("AnimationNodeAnimation_xd2l5")
states/Idle/position = Vector2(519, 248)
states/RESET/node = SubResource("AnimationNodeAnimation_2pms8")
states/RESET/position = Vector2(519, 148)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_u2an3")
states/Run/position = Vector2(637, 148)
states/Start/position = Vector2(313, 148)
transitions = ["RESET", "Run", SubResource("AnimationNodeStateMachineTransition_rh347"), "Run", "RESET", SubResource("AnimationNodeStateMachineTransition_aryfl"), "Idle", "RESET", SubResource("AnimationNodeStateMachineTransition_o82pg"), "RESET", "Idle", SubResource("AnimationNodeStateMachineTransition_w8gsf"), "Start", "RESET", SubResource("AnimationNodeStateMachineTransition_ucnp2"), "RESET", "End", SubResource("AnimationNodeStateMachineTransition_jk8ey")]

[node name="PlayerTemplate" type="CharacterBody2D"]
collision_layer = 512
collision_mask = 513
motion_mode = 1
script = ExtResource("1")

[node name="WorldCollisions" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("1")

[node name="PlayerHurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10
script = ExtResource("10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtbox"]
shape = SubResource("CircleShape2D_65xcc")

[node name="NodeInterpolater" type="Node2D" parent="."]
script = ExtResource("14_5jlmc")
catchup_speed = 15

[node name="OverwatchHealth" parent="NodeInterpolater" instance=ExtResource("26")]
material = SubResource("ShaderMaterial_qmhuf")
position = Vector2(0.999998, -28)
scale = Vector2(0.484375, 0.0859375)

[node name="Sprite2D" type="Sprite2D" parent="NodeInterpolater"]
position = Vector2(0, 22)
texture = ExtResource("17_ovi25")
offset = Vector2(0, -23)
hframes = 10
vframes = 15

[node name="Components" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("16_j57jl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
callback_mode_process = 2
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_nfg0w")
}

[node name="LocalRollbackAnimationTree" type="AnimationTree" parent="."]
callback_mode_process = 2
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_nfg0w")
}
tree_root = SubResource("AnimationNodeStateMachine_ypust")
anim_player = NodePath("../AnimationPlayer")
parameters/Run/blend_position = Vector2(0, 0)
script = ExtResource("18_vf848")
is_looping = true
